testsuite/tests/warnings/should_fail/IncompleteRecordUpdates.stderr

IncompleteRecordUpdates.hs:9:12: error:
    Pattern match(es) are non-exhaustive
    In a record-update construct:
        Patterns of type ‘PartialRec’ not matched: No
